@startuml
class UseCaseDiagram {
}

class DiagramBase {
}

class UseCase {
}

class DiagramObject {
	Documentation : XmlNode
	HasDocumentation : Boolean
	Identifier : String
	ImplementingType : Type
	Title : String
}

class Actor {
	Stereotype : String
}

class UseCaseRelation {
	HasMotive : Boolean
	Motivation : String
}


DiagramBase <|-- UseCaseDiagram
DiagramObject <|-- UseCase
DiagramObject <|-- Actor
DiagramObject <|-- UseCaseRelation

UseCaseDiagram "1" ---> "*" UseCase : UseCases
UseCaseDiagram "1" ---> "*" Actor : Actors
UseCaseDiagram "1" ---> "*" UseCaseRelation : Relations
UseCaseRelation ---> DiagramObject : From
UseCaseRelation ---> DiagramObject : To
